Audio/Fmod/fmod_wrapper.h

int initFmod(int sampleRateOverride);
int releaseFmod();
int updateFmod();
int loadSound(char* filePath);
int playSound(int soundIndex, int loopCount, float pan);
int stopChannel(int channelIndex);
int playMusic(char* filePath);
int fadeOutMusic();
int fadeInMusic(char* filePath, float volume);
int fadeOutChannel(int channelIndex);
int stopMusic();
int isMusicPlaying();
unsigned int musicPosition();
int setMusicPosition();
int setLoopCount(int channelIndex, int loopCount);
int setSoundVolume(float);
int setMusicVolume(float);
unsigned int musicChannelPosition();
int rampMusicToNormalVolume();